# SEIMS

./: .gitignore  CMakeLists.txt
database/: model_param_ini.txt
model_data/: Command.md  Command.txt  runmodels_dianbu.bat  runmodels_dingguang.bat
nsgaii_for_SEIMS/: __init__.py  config.py  nsga2.py  nsga2_example.py  nsgaii_dianbu_30m2_longterm_omp_gaohr_win.ini  readTextInfo.py  readme.md  scenario.py  solution.py  test.py
postprocess/: RelativeImportModules.py  SEIMS_db_vali_2016-09-09.xlsm  TODO.txt  config.py  hydroPlot.py  hydroPlot_main.py  post_dianbu_30m_longterm_omp_dgpm.ini  post_dianbu_30m_longterm_omp_gaohr_win.ini  post_dianbu_30m_longterm_omp_zhulj_win.ini  post_dingguang_30m_longterm_omp_zhulj_win.ini  read_subbasins_output.py  readme.md  run_models.py  test.py
preprocess/: MeteorologicalDaily.py  PrecipitationDaily.py  TauDEM.py  build_db.py  chwidth.py  cn2.py  config.py  delta_s.py  depression.py  dianbu2_30m_longterm_omp_dgpm.ini  dianbu2_30m_longterm_omp_ghr_win.ini  dianbu2_30m_longterm_omp_zhulj_win.ini  dianbu2_30m_longterm_omp_zhulj_winserver.ini  dianbu3_30m_longterm_omp_dgpm.ini  dianbu3_30m_longterm_omp_zhulj_win.ini  dianbu3_30m_longterm_omp_zhulj_winserver.ini  dianbu_30m_longterm_omp_dgpm.ini  dianbu_30m_longterm_omp_ghr_win.ini  dianbu_30m_longterm_omp_zhulj_win.ini  dingguang_30m_longterm_omp_zhulj_win.ini  find_sites.py  gen_dinf.py  gen_lookup_table.py  gen_subbasins.py  generate_stream_input.py  import_parameters.py  (+20 more)
src/main/main_mpi/: CMakeLists.txt  CalculateProcess.cpp  CombineRaster.cpp  ReadData.cpp  ReadData.h  parallel.h
(+200 files in other folders)
