#IF (NOT WIN32)
#    SET(CMAKE_CXX_COMPILER mpic++)
#ENDIF ()
#INCLUDE_DIRECTORIES(../main_omp)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
SET(SRC_LIST ReadData.cpp main.cpp ManagementProcess.cpp CalculateProcess.cpp CombineRaster.cpp)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_EXECUTABLE(seims_mpi ${SRC_LIST})
IF (MSVC)
    SET_PROPERTY(TARGET seims_mpi PROPERTY FOLDER "main")
ENDIF ()
IF (WIN32)
    TARGET_LINK_LIBRARIES(seims_mpi util data bmps module_setting main_mongodb gdal_i bson-1.0 mongoc-1.0)
ELSE ()
    TARGET_LINK_LIBRARIES(seims_mpi libmodule_setting.a libdata.a libbmps.a libutil.a libmain_mongodb.a libbson-1.0.so libmongoc-1.0.so libgdal.so)
ENDIF ()
